# CacheReplacementPolicies

./: CMakeLists.txt  Makefile  README.md  simple_test.cpp  test_rand  test_rand.cpp
LRU/: lru.cc  lru.h
examples/: bloom_filter_demo.cpp  s3fifo_cache_demo.cpp  srrip_cache_demo.cpp
include/: node.h  time_wheel.h
include/2Q/: 2q_cache.h  2q_shard.h
include/Clock/: clock_cache.h
include/GDSF/: cache.h
include/LIRS/: cache.h  lirs_node.h
include/SRRIP/: cache_line.h  cache_set.h  srrip_cache.h
include/arc/: arc_cache.h
include/fifo/: fifo_cache.h
include/lfu/: lfu_cache.h  lfu_shard.h
include/lru/: lru_cache.h  lru_shard.h  node.h
include/s3fifo/: cache.h
include/sieve/: cache.h  node.h
include/utils/: bit_utils.h  bloom_filter.h  intrusive_list.h  node.h  rand.h
include/w_tinylfu/: README.md
include/w_tinylfu/api/: cache.h  loading_cache.h
include/w_tinylfu/policy/: eviction_policy.h
include/w_tinylfu/sketch/: cms.h
src/BRRIP/: brrip_cache.cpp  brrip_cache.h  cache_line.h  cache_set.cpp  cache_set.h
src/GDSF/: cache.cpp  cache_instantiation.cpp
src/LIRS/: cache.cpp
src/MGLRU/: TEST_RESULTS.md  access_tracker.cpp  access_tracker.h  generation.cpp  generation.h  main.cpp  manager.cpp  memory_manager.h  mglru_core.cpp  mglru_core.h  mglru_types.h  pid_controller.cpp  pid_controller.h
src/SRRIP/: cache_set.cpp  srrip_cache.cpp  srrip_cache_instantiations.cpp
src/s3fifo/: cache.cpp
src/sieve/: cache.cpp
src/utils/: bloom_filter.cpp  rand.cpp
src/w_tinylfu/core/: loading_cache.cpp  w_tiny_lfu_cache.cpp
src/w_tinylfu/policy/: slru_policy.cpp
src/w_tinylfu/sketch/: cms.cpp
test/: address_mapping_test.cpp  arc_cache_test.cpp  arc_fifo_test.cpp  bloom_filter_test.cpp  clock_cache_test.cpp  gdsf_cache_tests  lfu_cache_test.cpp  lru_benchmark_test.cpp  lru_ttl_test.cpp  s3fifo_cache_test.cpp  srrip_cache_test.cpp  test_gdsf_cache.cpp  time_wheel_test.cpp
